# Awesome-LinkShortner

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 001_initial.sql
src/: config.rs  db.rs  errors.rs  main.rs
src/handlers/: auth.rs  links.rs  mod.rs  pages.rs  redirect.rs  stats.rs
src/middleware/: auth.rs  rate_limit.rs
src/models/: click.rs  link.rs  mod.rs  user.rs
src/utils/: mod.rs  shortcode.rs
templates/: base.html  dashboard.html  index.html  login.html  register.html  stats.html
