[package]
name = "linkshort"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bcrypt = "0.17"
jsonwebtoken = "9"
tower-http = { version = "0.6", features = ["cors", "trace"] }
askama = "0.12"
askama_axum = "0.4"
tower = "0.5"
axum-extra = { version = "0.10", features = ["cookie"] }
